Fixing the alignment of coloured bars for magazines and other sections

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -383,11 +383,15 @@ header nav .tools .hamburger-close img {
   header .nav-fragment[aria-expanded='true'],
   header .nav-fragment.expand {
     display: grid;
+    position: relative;
+    top: 8px;
   }
 
   header .nav-fragment.magazine[aria-expanded='true'],
   header .nav-fragment.magazine.expand {
     display: unset;
+    position: relative;
+    top: 8px;
   }
 
   header .nav-fragment .leftcolumn {
